[gd_scene load_steps=14 format=3 uid="uid://ci5u017kna0kd"]

[ext_resource type="Script" uid="uid://d2lrtribtb3kb" path="res://entities/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://b8r2lq0qa77d6" path="res://hud/hud.tscn" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://dulu0nwm301iu" path="res://assets/audio/sfx/player_hit.wav" id="3_e4p34"]
[ext_resource type="AudioStream" uid="uid://vcp0hffuubf1" path="res://assets/audio/sfx/footstep.ogg" id="4_rfe5m"]
[ext_resource type="AudioStream" uid="uid://cx7cotdx4pj2v" path="res://assets/audio/sfx/pick_up_treasure.wav" id="5_6nm46"]
[ext_resource type="AudioStream" uid="uid://cdjg78vdbglmg" path="res://assets/audio/sfx/heal.wav" id="5_ef06p"]
[ext_resource type="AudioStream" uid="uid://b0qsosy6lh6rg" path="res://assets/audio/sfx/pick_up_gun.wav" id="6_i623q"]
[ext_resource type="AudioStream" uid="uid://dw04wcdw122ip" path="res://assets/audio/sfx/pick_up_ammo.wav" id="7_ef06p"]
[ext_resource type="AudioStream" uid="uid://bhp7n123yi0y8" path="res://assets/audio/sfx/pick_up_heal.wav" id="9_tjdhl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]
height = 1.85

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vyb7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g2els"]
size = Vector3(1, 1, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_rfe5m"]
radius = 4.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_3vyb7")

[node name="Hud" parent="." instance=ExtResource("2_g2els")]
unique_name_in_owner = true

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="Model" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_3vyb7")

[node name="CloseRangeArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="CloseRangeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.997)
shape = SubResource("BoxShape3D_g2els")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AudioArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 6

[node name="AudioRange" type="CollisionShape3D" parent="AudioArea"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_rfe5m")

[node name="Node" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("3_e4p34")
bus = &"SFX"

[node name="Walk" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("4_rfe5m")
bus = &"SFX"

[node name="Heal" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("5_ef06p")
pitch_scale = 1.25
bus = &"SFX"

[node name="PickUpTreasure" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("5_6nm46")
volume_db = -10.0
bus = &"SFX"

[node name="PickUpGun" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("6_i623q")
bus = &"SFX"

[node name="PickUpAmmo" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("7_ef06p")
bus = &"SFX"

[node name="PickUpHeal" type="AudioStreamPlayer" parent="Node"]
unique_name_in_owner = true
stream = ExtResource("9_tjdhl")
bus = &"SFX"
